# rust-hexagonal

./: Cargo.toml
src/: lib.rs
src/application/: service.rs
src/domain/: domain.rs  error.rs  llm_repository.rs  mod.rs  store_repository.rs
src/infrastructure/: from_domain.rs  from_error.rs  llm_repository.rs  main.rs  mod.rs  store_repository.rs
